<resources>
    <string name="app_name">Korea VPN</string>
    <string name="no_vpn_connected">Vpn status: Not connected</string>
    <string name="prompt_spinner">Select location</string>
    <string name="connect">Tap to connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="feedback">Feedback </string>
    <string name="ad_attribution">Ad</string>
    <string name="aboutus">About US</string>
    <string name="moreapp">More Apps</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Tap to connect</string>
    <string name="select_vpn_location">Choose Servers</string>
    <string name="startapp_id">201953300</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAWjuXBa9PC0GnGmQyOG17JzWJwDiAISG8</string>
    <string name="search">Search here for region....</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="privacy">Privacy</string>
    <string name="rate">Rate US</string>
    <string name="home">Korea VPN</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logo_inapp_link">https://github.com/librespeed/speedtest-android</string>

    <string name="privacy_policy">file:///android_asset/privacy_en.html</string>


    <string name="init_init">Loading</string>
    <string name="initFail_configError">Configuration error</string>
    <string name="initFail_retry">Retry</string>
    <string name="init_selecting">Selecting server</string>
    <string name="initFail_noServers">No servers available</string>
    <string name="serverSelect_message">Select a server</string>
    <string name="start">Start</string>
    <string name="test_dl">Download</string>
    <string name="test_ul">Upload</string>
    <string name="test_speedMeasure">Mbps</string>
    <string name="test_ping">Ping</string>
    <string name="test_jitter">Jitter</string>
    <string name="test_timeMeasure">ms</string>
    <string name="test_share">Share result</string>
    <string name="test_restart">New test</string>
    <string name="testFail_err">An error occurred</string>
    <string name="testFail_retry">Try again</string>
    <string name="privacy_open"><u>Privacy</u></string>
    <string name="privacy_close"><u>Back</u></string>
    <string name="speed_test">Speed Test</string>
    <string name="tap_region">Smart Location</string>
    <string name="title_activity_nav">ActivityNav</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="usage">Usage</string>
    <string name="latency">Latency</string>
    <string name="connect_status">Connect Success</string>
    <string name="server">SERVER</string>
    <string name="server_name">USA</string>
    <string name="advertiser">advertiser</string>
    <string name="fetching_loc">Fetching Location</string>
    <string name="wait_text">Please wait!</string>
    <string name="proxy_apps">Select Proxy Apps</string>
    <string name="proxy_all_apps">Proxy all apps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dialog_congratulations_title">congrats</string>
    <string name="dialog_congratulations_summary">hshshsshshhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</string>
    <string name="subtext">Do You Want To Disconnect?</string>
    <string name="texView">This app collects a limited amount of data to offer you a fast and reliable VPN service. \n\n<br><br>Examples of information we collect when you use this app:</br></br>
        \n\n<br><br>• Device-specific information like OS version, hardware model and IP address to optimize our network connection to you and ensure quality of service.</br></br>
        \n\n<br><br>• Aggregated, anonymized activity data, to perform analytics on our service, share insights about usage, and to ensure you can reliably access certain websites or apps.</br></br>
        \n\n<br><br>• Total bandwidth consumed and time connected to our VPN service.</br></br>\\n
        \n<br><br>• Payment information and optional email, when you purchase a paid plan.</br></br>\\n\n

        Full details about the data we collect and how we process \n it are available in our <a href="https://mzhseclab.blogspot.com/2024/02/korea-vpn.html">Privacy Policy</a></string>
    <string name="description" />
</resources>