<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:card_view="http://schemas.android.com/tools"
	android:background="@color/White"
	android:orientation="vertical">
	
	<View
		android:id="@+id/topView"
		android:layout_width="match_parent"
		android:layout_height="160dp"
		android:background="@color/White"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<LinearLayout
		android:id="@+id/navBar"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/colorPrimary"
		android:gravity="center_vertical"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@+id/topView">
		
		<ImageView
			android:id="@+id/proxy_apps_back_pressed"
			android:layout_width="@dimen/_50sdp"
			android:layout_height="@dimen/_35sdp"
			android:padding="10dp"
			android:layout_marginStart="15dp"
			android:layout_marginEnd="25dp"
			app:srcCompat="@drawable/ic_back_new"
			android:contentDescription="@string/app_name"
			app:tint="@color/White" />
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/proxy_apps"
			android:textStyle="bold"
			android:textColor="@color/White"
			android:textSize="@dimen/_14sdp" />
	
	</LinearLayout>
	
	<TextView
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="15dp"
		android:layout_marginTop="20dp"
		android:text="@string/proxy_all_apps"
		android:textColor="@color/black"
		android:fontFamily="@font/montserrat"
		android:textStyle="bold"
		android:textSize="@dimen/_12sdp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/navBar" />
	
	<CheckBox
		android:id="@+id/chkAll"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:layout_marginTop="20dp"
		android:buttonTint="@color/colorGreen"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/navBar" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginTop="15dp"
		android:text="Or only proxy apps selected: "
		android:textColor="@color/black"
		android:fontFamily="@font/montserrat"
		android:textStyle="bold"
		android:textSize="@dimen/_12sdp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/chkAll" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/topView">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/proxy_recyclerView"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:layout_marginBottom="40dp"
				android:drawSelectorOnTop="false"
				android:scrollbarStyle="outsideOverlay"
				android:scrollbars="vertical"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/topView" />



			<androidx.cardview.widget.CardView
                android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@android:color/transparent"
				card_view:cardPreventCornerOverlap="false"
				app:cardElevation="0dp"
				android:gravity="center_vertical"
				app:cardCornerRadius="@dimen/_5sdp"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/proxy_recyclerView">

			</androidx.cardview.widget.CardView>


		</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



